popover flickering fix

--- a/src/app/domain/components/driverPopover/driverPopover.scss
+++ b/src/app/domain/components/driverPopover/driverPopover.scss
@@ -1,18 +1,29 @@
 driver-popover {
 
-  position: relative;
-
-
   .popover-inner {
 
-    min-width: 220px;
+    min-width: 205px;
+
+    .name {
+      font-weight: 600;
+    }
 
     .phone {
       margin-top: 5px;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+
+      label {
+        display: inline !important;
+      }
+
     }
-    label {
-      margin: 0;
-    }
+
+  }
+
+  span.caret {
+    top: 4px;
   }
 
 }
