--- a/src/app/domain/sales/shipment/shipment.scss
+++ b/src/app/domain/sales/shipment/shipment.scss
@@ -34,7 +34,7 @@ $line-height-basic: 20px;
     }
 
     @include responsive-only(lt-sm) {
-      height: 132px;
+      height: 130px;
     }
 
   }
@@ -98,7 +98,6 @@ $line-height-basic: 20px;
 
     .driver {
       min-width: $width-driver;
-      padding-right: 7px;
 
       @include responsive-only(gt-xs) {
         max-width: $width-driver;
@@ -279,17 +278,35 @@ $line-height-basic: 20px;
       height: 40px;
 
       driver-popover {
-        position: static;
+
+        position: relative;
+        @include responsive-only(lt-sm) {
+          height: 17px;
+        }
+
+        & > a {
+          display: inline-flex;
+          height: 40px;
+          @include responsive-only(lt-sm) {
+            height: 15px;
+          }
+
+        }
+
         ng-transclude {
           span {
+
             @extend .ellipsis;
-            display: block;
+            width: 85px;
+            display: inline-block;
+
+            @include responsive-only(lt-sm) {
+              width: 100%;
+            }
+
           }
-          min-width: 0;
         }
-        a {
-          @extend %flex-row;
-        }
+
       }
 
       @include responsive-only(lt-sm) {
@@ -311,7 +328,7 @@ $line-height-basic: 20px;
           align-items: center;
           min-width: 50px;
           font-size: $font-size-sm;
-          line-height: 17px;
+          line-height: 15px;
 
           span {
             font-weight: $font-weight-bold;
